Fix for service issue with paths having spaces (bug #687)